@@ -1,3 +1,6 @@
+11/12/2009
+- fixed variable filenames in {include_php} and {insert}
+
 11/11/2009
 - fixed {foreachelse}, {forelse}, {sectionelse} compiled code at nocache variables
 - removed checking for reserved variables
